# JARVIS-Personal-Artificial-Executive-System

./: .gitignore  README.md  pyproject.toml
docs/: verification-spike-findings.md
jarvis/: __init__.py  config.py  confirm.py  provenance.py  requests.py  router.py  vault.py
jarvis/actions/: __init__.py  digest.py  send_email.py
jarvis/harness/: __init__.py  reliability.py
jarvis/memory/: __init__.py  db.py  schema.sql  store.py
jarvis/providers/: __init__.py  calendar_state.py  gmail_state.py
jarvis/spikes/: __init__.py  decorrelated_verification.py
jarvis/tools/: __init__.py  browser.py
tests/: test_confirm.py  test_digest.py  test_gmail_state.py  test_memory_expiration.py  test_provenance.py  test_reliability_harness.py  test_router.py  test_send_email.py  test_verification_spike.py
