[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS Phase 1 — personal executive assistant: browser reliability gate + security spine"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "structlog>=24.1",
    # Phase 2 — Gmail provider state-read (metadata scope only)
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.130",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
